[gd_scene load_steps=6 format=3 uid="uid://cwox6etsdpnh8"]

[ext_resource type="Script" path="res://Scripts/SidePanelNodes/EndPathNodePanel.gd" id="1_tde0e"]
[ext_resource type="FontFile" uid="uid://2eq6t1lcw61" path="res://Assets/Fonts/NotoSans-Italic.ttf" id="2_8pysj"]
[ext_resource type="PackedScene" uid="uid://o5dt5106rohh" path="res://Objects/SubComponents/FilePickerLineEdit.tscn" id="2_ipaf1"]

[sub_resource type="LabelSettings" id="LabelSettings_qgp7i"]
font_color = Color(0.768627, 0.180392, 0.25098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_wvoxr"]
font = ExtResource("2_8pysj")
font_size = 12
font_color = Color(0.498039, 0.498039, 0.498039, 1)

[node name="TargetContainer" type="VBoxContainer"]
offset_right = 353.0
offset_bottom = 26.0
theme_override_constants/separation = 10
script = ExtResource("1_tde0e")

[node name="SubContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SubContainer"]
layout_mode = 2

[node name="TextLabel" type="Label" parent="SubContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Next story"

[node name="NextStoryContainer" type="VBoxContainer" parent="SubContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextStoryPicker" parent="SubContainer/NextStoryContainer" node_paths=PackedStringArray("warn_label") instance=ExtResource("2_ipaf1")]
layout_mode = 2
filters = Array[String](["*.json"])
warn_label = NodePath("../WarnLabel")

[node name="WarnLabel" type="Label" parent="SubContainer/NextStoryContainer"]
layout_mode = 2
text = "File path not found!"
label_settings = SubResource("LabelSettings_qgp7i")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
text = "Note: Variables are kept with their values between stories when you use this node."
label_settings = SubResource("LabelSettings_wvoxr")
autowrap_mode = 3

[connection signal="new_file_path" from="SubContainer/NextStoryContainer/NextStoryPicker" to="." method="_on_next_story_picker_new_file_path"]
